v.1.4 commit par error

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <h2>Mes Projets</h2> 
 <ul> 
 <li>Projet 1 : Site web simple</li> 
+<li>Projet 2 : Site error</li> 
 </ul> 
 </section> 
 </body> 
